# screen-capture_fr

./: CMakeLists.txt  README.md
main/: ScreenCapture.cpp  ScreenCapture.h  main.cpp  tutorial01.cpp
screen_capture_qt/: ScreenCapture.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  screen_capture_qt.pro
